--- a/package.json
+++ b/package.json
@@ -20,7 +20,10 @@
     "@angular/platform-browser": "~9.1.0",
     "@angular/platform-browser-dynamic": "~9.1.0",
     "@angular/router": "~9.1.0",
+    "@syncfusion/ej2-angular-charts": "^18.4.42",
+    "@syncfusion/ej2-ng-charts": "^16.2.50",
     "bootstrap": "^4.6.0",
+    "canvasjs": "^1.8.3",
     "font-awesome": "^4.7.0",
     "jquery": "^3.5.1",
     "rxjs": "~6.5.4",
